--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_storage: ^13.0.4
   image_picker: ^1.2.1
   google_mlkit_text_recognition: ^0.15.0
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
