--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.2.1
   google_mlkit_text_recognition: ^0.15.0
   google_sign_in: ^7.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
