--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   intl: ^0.20.2
   mobile_scanner: ^7.1.3
   qr_flutter: ^4.1.0
+  camera: ^0.11.0+2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
